--- a/src/components/modules/administracion/submodules/gastos-administrativos/submodules/nomina-personal/submodules/nomina/submodules/pagos-nomina/components/ResumenPagos.css
+++ b/src/components/modules/administracion/submodules/gastos-administrativos/submodules/nomina-personal/submodules/nomina/submodules/pagos-nomina/components/ResumenPagos.css
@@ -141,7 +141,7 @@
 /* Specific cell styling */
 .employee-name {
   font-weight: 500;
-  color: #000 !important;
+  color: #ffffff !important;
   white-space: nowrap;
 }
 
